--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         #game{
             width: 960px;
             height: 960px;
-            position: relative;
             margin: auto;
             background: #787e80;
+            position: relative;
         }
 
         #game > div{
@@ -18,7 +18,19 @@
             height: 100%;
         }
 
-        .character{
+        .layer1{
+            background-color: red;
+        }
+        .layer2{
+            top: 0;
+            left: 0;
+            position: absolute;
+            background-image: url(assets/spot.png);
+            background-repeat: no-repeat;
+            background-position: 200px 200px;
+        }
+
+        .character, .character_under{
             position: absolute;
             width: 64px;
             height: 100px;
@@ -42,8 +54,20 @@
 
     <script src="js/character.js"></script>
     <script>
-        var char1 = new Character("ben","spiderman", true);
-        char1.addToDOM();
+        var chars = [];
+        for(var i = 0; i < 100; i++){
+            chars[i] = new Character("ben","spiderman", true);
+            chars[i].addToDOM();
+        }
+
+        var fn = function(){
+            for(var i = 0; i < chars.length; i++){
+                chars[i].randomMove();
+            }
+            requestAnimationFrame(fn)
+        };
+        fn();
+
     </script>
 </body>
 </html>
