--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div id="game"></div>
 
     <script src="js/character.js"></script>
-    <script src="js/spot.js"></script>
+    <script src="js/Spot.js"></script>
     <script>
         var chars = [];
         for(var i = 0; i < 100; i++){
