--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             background-image: url(assets/spot.png);
             background-repeat: no-repeat;
             background-position: 200px 200px;
+            clip-path: circle(0,0,0);
+            -moz-clip-path: circle(0,0,0);
+            -webkit-clip-path: circle(0,0,0);
         }
 
         .character, .character_under{
