--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
             background-size: contain;
         }
 
+        .batman{
+            background: url("assets/batman_lowres.png");
+            background-size: contain;
+        }
+
         button{
             font-size: 200%;
             padding: 20px;
@@ -134,6 +139,15 @@
             font-size: 60px;
             position: absolute;
             bottom: 120px;
+            left: 0;
+            right: 0;
+            text-align: center;
+        }
+
+        .message{
+            font-size: 60px;
+            position: absolute;
+            bottom: 200px;
             left: 0;
             right: 0;
             text-align: center;
@@ -159,6 +173,7 @@
     <div id="game"></div>
 
     <audio class="bgmusic" src="assets/bg_music.mp3" loop="loop"></audio>
+    <audio id="sound"></audio>
 
     <script id="interscreen" type="text/htmlh">
         <h2 class="interscreen_title">Level cleared</h2>
@@ -169,11 +184,31 @@
     <script id="startscreen" type="text/htmlh">
         <h2 class="interscreen_title">Super Underwear</h2>
         <button class="next">Next Level</button>
+        <div class="message"></div>
         <div class="level"></div>
     </script>
 
     <script src="js/character.js"></script>
     <script>
+        var side1 = ["ben","clark","k"];
+        var side2 = [
+            ["spiderman","peter.mp3"],
+            ["hulk","banner.mp3"],
+            ["batman","wayne.mp3"]
+        ];
+
+        var heroes = [];
+        for(var i = 0; i < side1.length; i++){
+            for(var j = 0; j < side2.length; j++){
+                var hero = [];
+                hero[0] = side1[i];
+                hero[1] = side2[i][0];
+                hero[2] = side2[i][1];
+                heroes.push(hero);
+            }
+        }
+
+
         var bg_music = document.querySelector(".bgmusic");
         var total_score = 0;
         var levels = [
@@ -185,10 +220,8 @@
                     ["clark","nude"],
                     ["k","nude"]
                 ],
-                hero_combination: [
-                    ["ben","spiderman"],
-                    ["ben","hulk"]
-                ]
+                hero_combination: heroes,
+                message: "Find the super hero!"
             },
             {
                 chars: 100,
@@ -198,10 +231,7 @@
                     ["clark","nude"],
                     ["k","nude"]
                 ],
-                hero_combination: [
-                    ["ben","spiderman"],
-                    ["ben","hulk"]
-                ]
+                hero_combination: heroes
             },
             {
                 chars: 200,
@@ -211,10 +241,7 @@
                     ["clark","nude"],
                     ["k","nude"]
                 ],
-                hero_combination: [
-                    ["ben","spiderman"],
-                    ["ben","hulk"]
-                ]
+                hero_combination: heroes
             },
             {
                 chars: 300,
@@ -224,10 +251,7 @@
                     ["clark","nude"],
                     ["k","nude"]
                 ],
-                hero_combination: [
-                    ["ben","spiderman"],
-                    ["ben","hulk"]
-                ]
+                hero_combination: heroes
             },
             {
                 chars: 400,
@@ -237,11 +261,40 @@
                     ["clark","nude"],
                     ["k","nude"]
                 ],
-                hero_combination: [
-                    ["ben","spiderman"],
-                    ["ben","hulk"]
-                ]
+                hero_combination: heroes
             },
+            {
+                chars: 10,
+                heroes: 1,
+                hero_combination: [
+                    ["ben","nude","mob.mp3"],
+                    ["clark","nude","mob.mp3"],
+                    ["k","nude","mob.mp3"]
+                ],
+                chars_combination: heroes,
+                message: "Find the normal guy!"
+            },
+            {
+                chars: 100,
+                heroes: 1,
+                chars_combination: [
+                    ["batman","nude","mob.mp3"]
+                ],
+                hero_combination:  [["batman","batman","wayne.mp3"]],
+                message: "Find the goddamn batman!"
+            },
+            {
+                chars: 100,
+                heroes: 1,
+                chars_combination: heroes,
+                hero_combination:  [
+                    ["ben","nude","mob.mp3"],
+                    ["clark","nude","mob.mp3"],
+                    ["k","nude","mob.mp3"]
+                ],
+                message: "Find the goddamn batman!"
+            },
+
         ];
 
         var current_level = 0;
@@ -290,6 +343,9 @@
                 cb();
             });
             div.querySelector(".level").innerHTML = "Level "+(current_level+1);
+            if(levels[current_level].message){
+                div.querySelector(".message").innerHTML = levels[current_level].message;
+            }
             document.getElementById("game").appendChild(div);
         };
 
